# webThing

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
static/: index.html  script.js  style.css
tests/: api.hurl  api_test.rs  integration_test.rs
