[package]
name = "webThing"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.11.0"
assert_cmd = "2.0.17"
blake3 = "1.8.2"
env_logger = "0.11.8"
predicates = "3.1.3"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-async-std"] }
